services/SRV40062-getCarrierBillingOffers-1.0/ocp-deploy/components/rest-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    component: '#(deploy-name)#'
    group: fuse7-java-openshift
    version: '#(version.service)#'
  name: '#(deploy-name)#-route-rest'
spec:
  host: '#(project-id)#.#(wildcard)#'
  path: '#(prop.service.rest.resource)#'
  port:
    targetPort: service-rest
  to:
    kind: Service
    name: '#(deploy-name)#'
